--- a/style.css
+++ b/style.css
@@ -60,7 +60,6 @@ header {
 .varukorg {
     border: 0;
     background-color: crimson;
-   
     cursor: pointer;
 }
 
@@ -146,6 +145,220 @@ header {
 }
 
 /*------------------------------  Handla ------------------------------*/
+.varor{
+    visibility: hidden;
+    position: absolute;
+    left: 68%;
+    width: 30%;
+    height: 500px;
+    background-color: white;
+    z-index: 1;
+    padding: 2px;
+}
+.items{
+    position: absolute;
+    z-index: 2;
+    right: 3.5%;
+    top: 5%;
+    border: 0;
+    width: 30px;
+    height: 20px;
+    color: white;
+    background-color: gray;
+    border-radius: 10px;
+    cursor: pointer;
+}
+.noitems{
+    position: absolute;
+    font-size: 20px;
+    left: 10%;
+    top: 22%;
+    z-index: 1;
+}
+.martinbild{
+    position: absolute;
+    left: 10%;
+    top: 27%;
+}
+.shoppingcart{
+    position: relative;
+}
+.varor h1{
+    display: flex;
+    justify-content: center;
+}
+.varukorgvaror {
+    border: 0;
+    position: absolute;
+    height: 55%;
+    width: 99%;
+    bottom: 170px;
+    overflow-y: scroll;
+    scrollbar-width: thin;
+    background-color: white;
+}
+.varukorgsbild {
+    width: 70px;
+}
+.varukorgbutton {
+    border: 0;
+    width: 60%;
+    height: 40px;
+    position: relative;
+    top: 390px;
+    left: 20%;
+    border-radius: 10px;
+    background-color: crimson;
+    color: white;
+    cursor: pointer;
+}
+.varukorgbutton:hover {
+    background-color: rgb(241, 74, 107);
+}
+
+.varukorgbutton:active {
+    background-color: crimson;
+}
+
+.gkant {
+    font-size: 2px;
+    background-color: gray;
+    width: 100%;
+    position: relative;
+    top: 15px;
+}
+.gkant2 {
+    font-size: 2px;
+    background-color: gray;
+    width: 100%;
+    position: relative;
+    top: 292px;
+}
+.gkant3 {
+    font-size: 2px;
+    background-color: gray;
+    width: 100%;
+    position: relative;
+    top: 365px;
+}
+
+.pvarukorgsknapp {
+    border: 0;
+    border-radius: 10px;
+    width: 10%;
+    height: 13%;
+    background-color: crimson;
+    color: white;
+    margin-top: 3px;
+    margin-left: 5px;
+    cursor: pointer;
+    position: absolute;
+    left: 87%;
+}
+
+.mvarukorgsknapp {
+    border: 0;
+    border-radius: 10px;
+    width: 10%;
+    height: 13%;
+    background-color: crimson;
+    color: white;
+    margin-top: 3px;
+    margin-left: 5px;
+    cursor: pointer;
+    position: absolute;
+    left: 67%;
+}
+.avarukorgsknapp {
+    border: 0;
+    border-radius: 10px;
+    width: 10%;
+    height: 13%;
+    background-color: white;
+    color: gray;
+    margin-top: 3px;
+    margin-left: 5px;
+    position: absolute;
+    left: 77%;
+}
+.mvarukorgsknapp:hover {
+    background-color: rgb(241, 74, 107);
+}
+.mvarukorgsknapp:active {
+    background-color: crimson;
+}
+.pvarukorgsknapp:hover {
+    background-color: rgb(241, 74, 107);
+}
+.pvarukorgsknapp:active {
+    background-color: crimson;
+}
+
+.bilderpåprodukt {
+    display: flex;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+.varukorgstext{
+    display: flex;
+    flex-direction: column;
+}
+.tabortallavaror {
+    position: absolute;
+    top: 347px;
+    left: 15px;
+    width: 20%;
+    height: 10%;
+}
+
+.svenskgurka {
+    display: none;
+}
+.gurkaklass1 {
+    display: none;
+}
+.djungelgurka {
+    display: none;
+}
+.barudsgurka {
+    display: none;
+}
+.snackgurka {
+    display: none;
+}
+.libanesiskgurka {
+    display: none;
+}
+.börjesson {
+    display: none;
+}
+.ozansdolma {
+    display: none;
+}
+.ruttengurka {
+    display: none;
+}
+.salzgurken {
+    display: none;
+}
+.鸭舌头 {
+    display: none;
+}
+.ingavaror {
+    position: absolute;
+    top: 50px;
+    left: 30px;
+}
+
+
+
+
+
+
+
+
+
+
 
 .erbjudande h1 {
     display: flex;
@@ -643,8 +856,13 @@ background-color:rgb(226, 204, 204)
 
 .rabattbild img {
     width: 100%;
-
 }
+.rabattbild button {
+    width: 40%;
+    position: relative;
+    left: 5%;
+}
+
 
 /*---------------------- OK ---------------------*/
 
@@ -664,4 +882,10 @@ background-color:rgb(226, 204, 204)
     display: grid;
 }
     
-    
+
+.scroller {
+    width: 400px;
+    height: 400px;
+    overflow-y: scroll;
+    scrollbar-width: thin;
+  }
